# DS-User-Guide

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-preview.yml  build.yml
user-guide/: index.md  mkdocs.base.yml  mkdocs.local.yml  mkdocs.yml
user-guide/docs/: analysis.md  apiusecases.md  cloudstoragetransfer.md  commandlinetransfer.md  curating.md  cyberducktransfer.md  datadepot.md  datadepotbrowser.md  datatransfer.md  dictionary.md  experimentalfacilitychecklist.md  generalusecases.md  geohazardusecases.md  globusdatatransfer.md  hurricaneusecases.md  index.md  jupyterbrowser.md  managingdata.md  recon.md  seismicusecases.md  settingpathtodesignsafe.md  usecases.md
user-guide/docs/analysis/: analysis-jupyter.md  analysis-overview.md  hvsrweb.md  matlab.md  overview.md  swbatch.md
user-guide/docs/css/: README.md  ds-docs.css
user-guide/docs/curating/: bestpractices.md  faq.md  guides.md  metrics.md  officehours.md  policies.md
user-guide/docs/dictionary/: experimental.md  field.md  hybrid.md  other.md  simulation.md
user-guide/docs/documents/: DesignSafe_Data_Management_Plan_Guidance.docx
user-guide/docs/js/: README.md  changeNavMarkup.js  setTargetForExternalLinks.js
user-guide/docs/managingdata/: cloudstoragetransfer.md  commandlinetransfer.md  cyberducktransfer.md  datadepot.md  datadepotbrowser.md  datamanagementplan.md  datatransfer.md  experimentalfacilitychecklist.md  globuscommandlinetransfer.md  globusdatatransfer.md  jupyterbrowser.md  settingpathtodesignsafe.md
user-guide/docs/tools/: hazard.md  hazard_utils.md  jupyterhub.md  recon.md  simulation.md  utilities.md  visualization.md
(+165 files in other folders)
