[tool.poetry]
name = "tacc-docs"
version = "0.1.0"
description = ""
authors = ["rstijerina <r.sal.tijerina@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
mkdocs = "^1.4.2"
pymdown-extensions = "^10.0"
mkdocs-exclude-search = "^0.6.5"
# for {% include-markdown '…' %} (rel. paths in included files without warnings)
mkdocs-include-markdown-plugin = "^4.0.4"
# for {% include '…' %} (rel. paths in included files causes warnings) and more
mkdocs-macros-plugin = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
