[tool.poetry]
name = "ds-user-guide"
version = "1.0.0"
description = ""
package-mode = false
authors = ["rstijerina <r.sal.tijerina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
mkdocs = "^1.4.2"
mkdocs-include-markdown-plugin = "^4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
